--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
-project(mpi)
+project(two_dimensional_heat_equation)
 
 set(CMAKE_CXX_STANDARD 17)
+
+set(CMAKE_BUILD_TYPE "Debug")
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
     if(MSVC)
@@ -27,7 +29,7 @@ include_directories(${MPI_INCLUDE_PATH})
 
 aux_source_directory(src SRC)
 
-add_executable(${PROJECT_NAME} ${SRC})
+add_executable(${PROJECT_NAME} ${SRC} test/main.cpp test/CommonToolsTests.cpp src/CommonTools.h src/CommonTools.cpp)
 
 if(MPI_COMPILE_FLAGS)
     set_target_properties(${PROJECT_NAME} PROPERTIES
@@ -40,3 +42,5 @@ if(MPI_LINK_FLAGS)
 endif()
 
 target_link_libraries(${PROJECT_NAME} ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
+
+add_subdirectory(test)
